<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usersystem.views.user.RegisterActivity"
    android:background="?attr/backColor">

    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_login_div" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="?attr/textColor"
            android:layout_marginTop="15dp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:textColor="?attr/textColor"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/PleaseRegister" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:background="#fff"
            android:hint="@string/input_username"
            android:ems="10" >
        </EditText>

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:background="#fff"
            android:inputType="textPassword"
            android:hint="@string/input_password1"
            android:ems="10" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:background="#fff"
            android:inputType="textPassword"
            android:hint="@string/input_password2"
            android:ems="10" />

        <Button
            android:id="@+id/register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/register"
            />
        <Button
            android:id="@+id/back"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:text="back"
            />
    </LinearLayout>
</RelativeLayout>
