<?xml version="1.0" encoding="utf-8"?><!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:id="@+id/screen"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="@drawable/background_login">-->


<!--</RelativeLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".stage3.view.BattleActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350px"
        android:background="@drawable/background_login"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="3"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:text="@string/Life"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/monster_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:text="@string/monster_life"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:text="@string/Attack"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_defence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:text="@string/Defence"
                android:textSize="40px"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/your_flexibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:text="@string/Flexibility"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_luckiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_margin="10dp"
                android:text="@string/Luckiness"
                android:textSize="40px"
                android:textStyle="bold" />
        </GridLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/frame"
        android:layout_width="1080px"
        android:layout_height="1080px"
        android:background="@drawable/forest_background"
        android:scaleType="centerCrop">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="500px"
            android:layout_height="500px"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/bat_brains_6" />

        <TextView
            android:id="@+id/monster_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="200px"
            android:text="@string/this_is_a_cute_monster"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="60px"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/round_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Round Number:"
            android:textColor="#FFFFFF"
            android:textSize="50px"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#C0C0C0"
            android:columnCount="3"
            android:rowCount="3">

            <Button
                android:id="@+id/checkBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/check" />

            <Button
                android:id="@+id/attackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="Attack" />

            <Button
                android:id="@+id/defenceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:text="Defence" />

            <Button
                android:id="@+id/evadeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:text="Evade" />
        </GridLayout>

    </LinearLayout>
</LinearLayout>